chore: update security config and webclient config, add JVM option in Dockerfile, add some db example, add ResourceOAuthServer